# surogate-agent

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release-please.yml
docs/: api.md  cli.md  development.md
src/frontend/: .gitignore  CLAUDE.md  README.md  angular.json  package-lock.json  package.json  postcss.config.js
src/frontend/src/: index.html  styles.css
src/frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
src/frontend/src/app/core/guards/: auth.guard.ts
src/frontend/src/app/core/interceptors/: auth.interceptor.ts
src/frontend/src/app/core/models/: auth.models.ts  chat.models.ts  expert.models.ts  mcp.models.ts  session.models.ts  skill.models.ts  task.models.ts
src/surogate_agent/: __init__.py
src/surogate_agent/api/: __init__.py  app.py  deps.py  models.py  pdf_convert.py  server.py
src/surogate_agent/api/routers/: auth.py  chat.py  experts.py  mcp_servers.py  sessions.py  skills.py  tasks.py  vllm.py  workspace.py
src/surogate_agent/auth/: __init__.py  database.py  jwt.py  models.py  schemas.py  service.py
src/surogate_agent/backends/: guard.py
src/surogate_agent/cli/: __init__.py  chat.py  main.py  session.py  skills.py  workspace.py
src/surogate_agent/core/: __init__.py  agent.py  config.py  logging.py  roles.py  session.py
src/surogate_agent/experts/: tools.py
src/surogate_agent/hitl/: __init__.py  resume.py  tools.py
src/surogate_agent/mcp/: lifecycle.py  registry.py
src/surogate_agent/middleware/: __init__.py  role_guard.py
src/surogate_agent/skills/: __init__.py  loader.py  registry.py
src/surogate_agent/skills/builtin/form-developer/: SKILL.md
src/surogate_agent/skills/builtin/mcp-manager/: SKILL.md
src/surogate_agent/skills/builtin/skill-developer/: SKILL.md
tests/: test_agent.py  test_api.py  test_roles.py  test_session.py  test_skill_loader.py
(+71 files in other folders)
